# spreadsheet-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  implementation_plan.md  langgraph.json  pyproject.toml
.github/: copilot-instructions.md
data/: .gitignore
sample_data/: complex_sales_workbook.xlsx  edge_cases_workbook.xlsx
src/agent/: graph.py  prompts.py
src/agent/utils/: nodes.py  state.py  tools.py
src/api/: main.py  schemas.py
src/api/routers/: query.py  sessions.py
src/core/: config.py  dataframe_loader.py  sandbox.py  session_store.py  workbook_inspector.py
tests/: conftest.py  test_config.py  test_dataframe_loader.py  test_graph.py  test_query_api.py  test_sandbox.py  test_session_store.py  test_sessions_api.py  test_tools.py  test_workbook_inspector.py
ui/: app.py
