[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spreadsheet-agent"
version = "0.1.0"
description = "AI agent for Q&A over large Excel spreadsheets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0,<1.1",
    "langgraph-checkpoint-sqlite>=3.0.1,<3.1",
    "langchain-openai>=0.3.35,<0.4",
    "openai>=1.30,<2.0",
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.29,<1.0",
    "openpyxl>=3.1,<4.0",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "python-calamine>=0.2,<1.0",
    "xlrd>=2.0,<3.0",
    "pyxlsb>=1.0,<2.0",
    "RestrictedPython>=7.0,<8.0",
    "pydantic-settings>=2.2,<3.0",
    "aiosqlite>=0.20,<1.0",
    "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.4,<1.0",
    "xlwt>=1.3,<2.0",
    "streamlit>=1.35",
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/api", "src/core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-p no:langsmith_plugin -p no:langsmith"
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agent", "api", "core"]
